--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -1,6 +1,26 @@
 News
 ----
 
+30 Dec 2013 New version 1.162 (redhat 5/6 and debian packages released to Sourceforge)
+
+* Added Parent Template field to the Templates tab.
+* Added project icon.
+
+29 Dec 2013 New version 1.161 (redhat 5/6 and debian packages released to Sourceforge)
+
+* Bug fixes
+
+22 Dec 2013 New version 1.160 (redhat 5/6 and debian packages released to Sourceforge)
+
+* The GUI now works in Internet Explorer 8, 9, 10 and 11.
+* More fields have been added to the GUI for Host Templates, Service Templates, and Contacts.
+* Added auto-completion to most applicable text entry boxes.
+* Servicesets field in hosts now accepts multiple service sets. Service sets are added from left to right; any duplicate services are overwritten by the rightmost serviceset.
+* The service sets can now be edited and reapplied to hosts using the edit host dialog.
+* Bulk Tools, new `Add Hosts' tab: Allows bulk adding of hosts using csv files.
+* Bulk Tools, new `Refresh Hosts' tab: Applies service sets to many hosts.
+* Various bug fixes and extra validity checks.
+
 18 Aug 2013 New version 1.158 https://sourceforge.net/projects/nagrestconf/files/[(Debian packages)]
 
 17 Aug 2013 New version 1.158 https://sourceforge.net/projects/nagrestconf/files/[(Centos/Redhat RPMS)]
