--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,13 +10,10 @@ CAUTION: THIS SOFTWARE IS IN THE http://en.wikipedia.org/wiki/Software_release_l
 Latest News
 ~~~~~~~~~~~
 
-06 Jan 2013 New version 1.165 (redhat 5/6 and debian packages released to Sourceforge)
+09 Jan 2013 New version 1.167 (redhat 5/6 and debian packages released to Sourceforge)
 
 * Important bug fixes. READ the Upgrade section before upgrading.
-
-03 Jan 2013 New version 1.163 (redhat 5/6 and debian packages released to Sourceforge)
-
-* New Backup & Restore plugin.
+* Bug squashing.
 
 License
 ~~~~~~~
@@ -258,18 +255,18 @@ freshly installing the Operating System with a minimal set of packages.
 ----------------------------------------------------------
 # On Debian:
 apt-get update
-gdebi nagrestconf_1.163_all.deb \
-      nagrestconf-services-plugin_1.163_all.deb \
-      nagrestconf-services-bulktools-plugin_1.163_all.deb \
-      nagrestconf-hosts-bulktools-plugin_1.163_all.deb \
-      nagrestconf-backup-plugin_1.163_all.deb
+gdebi nagrestconf_1.167_all.deb \
+      nagrestconf-services-plugin_1.167_all.deb \
+      nagrestconf-services-bulktools-plugin_1.167_all.deb \
+      nagrestconf-hosts-bulktools-plugin_1.167_all.deb \
+      nagrestconf-backup-plugin_1.167_all.deb
 
 # On Centos/Redhat:
-yum install nagrestconf-1.163-1.noarch.rpm \
-            nagrestconf-services-tab-plugin-1.163-1.noarch.rpm \
-            nagrestconf-services-bulktools-plugin-1.163-1.noarch.rpm \
-            nagrestconf-hosts-bulktools-plugin-1.163-1.noarch.rpm \
-            nagrestconf-backup-plugin-1.163-1.noarch.rpm
+yum install nagrestconf-1.167-1.noarch.rpm \
+            nagrestconf-services-tab-plugin-1.167-1.noarch.rpm \
+            nagrestconf-services-bulktools-plugin-1.167-1.noarch.rpm \
+            nagrestconf-hosts-bulktools-plugin-1.167-1.noarch.rpm \
+            nagrestconf-backup-plugin-1.167-1.noarch.rpm
 
 ----------------------------------------------------------
 +
