--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.168) UNRELEASED; urgency=low
+
+  * Bug squashing.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Mon, 06 Jan 2014 22:32:00 +0000
+
 nagrestconf (1.167) UNRELEASED; urgency=low
 
   * Bug squashing.
