--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,9 +10,9 @@ CAUTION: THIS SOFTWARE IS IN THE http://en.wikipedia.org/wiki/Software_release_l
 Latest News
 ~~~~~~~~~~~
 
-09 Jan 2013 New version 1.167 (redhat 5/6 and debian packages released to Sourceforge)
+09 Jan 2013 New version 1.168 (redhat 5/6 and debian packages released to Sourceforge)
 
-* Important bug fixes. READ the Upgrade section before upgrading.
+* READ the Upgrade section before upgrading a version <1.165.
 * Bug squashing.
 
 License
@@ -255,18 +255,19 @@ freshly installing the Operating System with a minimal set of packages.
 ----------------------------------------------------------
 # On Debian:
 apt-get update
-gdebi nagrestconf_1.167_all.deb \
-      nagrestconf-services-plugin_1.167_all.deb \
-      nagrestconf-services-bulktools-plugin_1.167_all.deb \
-      nagrestconf-hosts-bulktools-plugin_1.167_all.deb \
-      nagrestconf-backup-plugin_1.167_all.deb
+apt-get install gdebi-core
+gdebi nagrestconf_1.168_all.deb \
+      nagrestconf-services-plugin_1.168_all.deb \
+      nagrestconf-services-bulktools-plugin_1.168_all.deb \
+      nagrestconf-hosts-bulktools-plugin_1.168_all.deb \
+      nagrestconf-backup-plugin_1.168_all.deb
 
 # On Centos/Redhat:
-yum install nagrestconf-1.167-1.noarch.rpm \
-            nagrestconf-services-tab-plugin-1.167-1.noarch.rpm \
-            nagrestconf-services-bulktools-plugin-1.167-1.noarch.rpm \
-            nagrestconf-hosts-bulktools-plugin-1.167-1.noarch.rpm \
-            nagrestconf-backup-plugin-1.167-1.noarch.rpm
+yum install nagrestconf-1.168-1.noarch.rpm \
+            nagrestconf-services-tab-plugin-1.168-1.noarch.rpm \
+            nagrestconf-services-bulktools-plugin-1.168-1.noarch.rpm \
+            nagrestconf-hosts-bulktools-plugin-1.168-1.noarch.rpm \
+            nagrestconf-backup-plugin-1.168-1.noarch.rpm
 
 ----------------------------------------------------------
 +
