--- a/README.asciidoc
+++ b/README.asciidoc
@@ -13,6 +13,9 @@ Latest News
 13 Jan 2013 New version 1.169 (packages released to Sourceforge)
 
 * Now in Beta. (Feature freeze)
++
+Only bug fixes and plugins will be developed with version 1.x
++
 * Added extra back-end checks and autocomplete for time periods.
 
 License
