--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,6 +10,10 @@ CAUTION: THIS SOFTWARE IS IN THE http://en.wikipedia.org/wiki/Software_release_l
 Latest News
 ~~~~~~~~~~~
 
+15 Jan 2013 (synagios.spk for x86 released to sourceforge)
+
+* NEW - Nagrestconf for Synology Diskstation NAS devices.
+
 13 Jan 2013 New version 1.169 (packages released to Sourceforge)
 
 * Now in Beta. (Feature freeze)
@@ -244,7 +248,7 @@ Install Using Prebuilt Packages
 
 For all functionality download and install all four RPMs or debian packages.
 
-.*DEBIAN, CENTOS & REDHAT*
+.*DEBIAN, UBUNTU, FEDORA, CENTOS & REDHAT*
 
 Do not install on an existing Nagios server. Use the following procedure after
 freshly installing the Operating System with a minimal set of packages.
@@ -323,6 +327,19 @@ a supported Web Browser at `http://localhost/nagrestconf'.
 +
 If something goes wrong then there are configuration files in the directory
 '/etc/nagrestconf' that might need correcting.
+
+*SYNOLOGY DSM 4.3+ x86 DEVICES*
+
+Download the package, synagios.spk, for your device from sourceforge:
+
+https://sourceforge.net/projects/nagrestconf/files/synology
+
+In the DSM Desktop open the 'Package Center' then choose 'Manual Install'.
+
+After installation use nagrestconf to restore the example configuration,
+nagcfgbak_xxx.tgz, which is also in the synology directory at sourceforge.
+
+To view nagios use: http://diskstation/nagios3
 
 Plugins
 ~~~~~~~
