--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.174) UNRELEASED; urgency=low
+
+  * Fixes and enhancements.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Sun, 06 Sep 2015 18:45:00 +0000
+
 nagrestconf (1.173) UNRELEASED; urgency=low
 
   * Upstream fixes and enhancements.
